# fire-incidents

./: .env  .env_example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  profiles.yml  pyproject.toml
.github/workflows/: test.yml
dbt/: dbt_project.yml
dbt/models/: fire_incidents.yml  fire_incidents_clean.sql  incidents_by_district_battalion_day.sql
fire_incidents/: dbt_project.yml
fire_incidents/clients/: socrata_client.py
fire_incidents/jobs/: load_fire_incidents_raw.py
fire_incidents/loaders/: postgres_loader.py  sql_loader.py
fire_incidents/utils/: argparse.py  secrets.py
tests/clients/: test_socrata_client.py
tests/jobs/: test_load_fire_incidents_raw.py
tests/loaders/: test_sql_loader.py
