[tool.poetry]
name = "fire_incidents"
version = "0.1.0"
description = "ETL project using SF Fire Incidents"
authors = ["Victor Lucio <victor.lucio10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sodapy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
