[tool.poetry]
name = "fire_incidents"
version = "0.1.0"
description = "ETL project using SF Fire Incidents"
authors = ["Victor Lucio <victor.lucio10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sodapy = "^2.2.0"
dbt-postgres = "^1.7.4"
loguru = "^0.7.2"
pandas = "^2.1.4"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
